# aos-cc-mcp

./: .env.example  .gitignore  CLAUDE.md  COORDINATOR_HANDOFF.md  DEFERRED.md  README.md  ecosystem.config.cjs  pyproject.toml
src/aos_cc_mcp/: __init__.py  __main__.py  anomaly_rules.py  audit.py  auth.py  dispatch.py  events.py  middleware.py  modes.py  parser.py  server.py  tools.py
tests/: conftest.py  test_audit.py  test_auth.py  test_detect_anomalies.py  test_diff_intent_vs_execution.py  test_dispatch.py  test_extract_commits.py  test_list_sessions.py  test_middleware.py  test_modes.py  test_package_entry.py  test_parser.py  test_read_session.py  test_search_sessions.py  test_server.py  test_session_summary.py
tests/fixtures/: session_console_medium.jsonl  session_dcl_short.jsonl  session_farm_medium.jsonl
tests/fixtures/-test-project/: test-farm.jsonl  test-long.jsonl  test-medium.jsonl  test-short.jsonl
tests/fixtures/anomalies/: clean_session.jsonl  hook_bypass.jsonl  hook_fire_silent_fix.jsonl  silent_error.jsonl  test_skip_added.jsonl  uncommitted_end.jsonl  verification_empty.jsonl
