[project]
name = "aos-cc-mcp"
version = "0.1.0"
description = "MCP server exposing Claude Code session logs and scoped write capabilities to the AOS Coordinator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
aos-cc-mcp = "aos_cc_mcp.server:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (skip with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
